2013-10-15  Timo Pollmeier <timo.pollmeier@greenbone.net>

	* src/html/omp.xsl (html-users-table): Use database field with same
	name for sorting "Roles" column.

2013-10-15  Matthew Mundell <matthew.mundell@greenbone.net>

	Make remaining Details window headings like others.

	* src/html/omp.xsl (tag [details]): Remove name heading to match other
	Details pages.  It's already in the name field.
	(get_nvts): Move page specific header icons slight to the right, as in
	other pages.
	(host): Move back link to list icon.

2013-10-15  Matthew Mundell <matthew.mundell@greenbone.net>

	Make Config window headings more like others.

	* src/html/omp.xsl (html-config-family-table): Drop Details from edit
	page name, as on Config page.  Move back link to list icon in header.
	Bold Family field.  Remove extra TD causing small empty column on right.
	(html-config-nvt-table): Drop Details from edit page name.  Move back
	link to icon.  Move Config field down to others.  Remove top Family
	field because there is one below.  Remove heading that duplicates window
	title.  Remove Details heading to match other pages.
	(nvt): Add Config field.

2013-10-14  Matthew Mundell <matthew.mundell@greenbone.net>

	Make Result Details window heading more like others.

	* src/gsad.c (init_validator): Add export_result to commands
	(exec_omp_get): Handle export_result.

	* src/gsad_omp.c (export_resource): Add special case for result
	location.
	(export_result_omp): New function.

	* src/gsad_omp.h: Add header accordingly.

	* src/html/help.xsl (contents.html): Add Result Details item.
	(result_details.html): New template.

	* src/html/omp.xsl (result-details): Add help and export icons.  Move
	report link to header icon.  Add ID minor field.

2013-10-14  Matthew Mundell <matthew.mundell@greenbone.net>

	Add Alterable Tasks.

	* CMakeLists.txt: Install alterable PNG.

	* src/gsad.c (init_validator): Add alterable.

	* src/gsad_omp.c (clone_omp): Send alterable if given.
